--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ h3{
     overflow: hidden;
     
     box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0, 0, 0.24);                      
-    transform:all 0.3s cubic-bezier(.25, .8, .25, 1);
+    transform:all 0.3sec cubic-bezier(.25, .8, .25, 1);
 }
 .bar:hover{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25),0 10px 10px rgba(0, 0, 0.22);
@@ -236,7 +236,7 @@ h3{
 .bar span{
     height:20px;
     float:left;
-    background: linear-gradient(135deg, rgba(236, 0, 140, 1)0%, rgba(252, 103, 103, 1.0)100%);
+    background: linear-gradient(135deg, rgb(0, 212, 236)0%, rgb(103, 242, 252)100%);
 }
 .html{
     width: 90%;
@@ -248,7 +248,7 @@ h3{
     animation: css 3s;
 }
 
-.php{
+.React{
     width: 45%;
     animation: php 3s;
 }
